BugFix: Fixed overflow on nav bar in Episodes section where it would push the page down

--- a/style.css
+++ b/style.css
@@ -176,6 +176,7 @@ body {
     height: 90%;
     width: 80%;
     padding: 10px;
+    overflow-y: auto;
 }
 /*episodes*/
 .season-btn{
